include_HEADERS = \
	libfplist.h

pkginclude_HEADERS = \
	libfplist/definitions.h \
	libfplist/error.h \
	libfplist/extern.h \
	libfplist/features.h \
	libfplist/types.h

EXTRA_DIST = \
	libfplist.h.in \
	libfplist/definitions.h.in \
	libfplist/features.h.in \
	libfplist/types.h.in

DISTCLEANFILES = \
	libfplist.h \
	libfplist/definitions.h \
	libfplist/features.h \
	libfplist/types.h \
	Makefile \
	Makefile.in

