MSVSCPP_FILES = \
	fplist_test_error/fplist_test_error.vcproj \
	fplist_test_key/fplist_test_key.vcproj \
	fplist_test_plist/fplist_test_plist.vcproj \
	fplist_test_support/fplist_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libfplist.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

