MSVSCPP_FILES = \
	fplist_test_error/fplist_test_error.vcproj \
	fplist_test_property/fplist_test_property.vcproj \
	fplist_test_property_list/fplist_test_property_list.vcproj \
	fplist_test_support/fplist_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libfplist.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

